--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "tailwindcss": "^3.3.2"
   },
   "scripts": {
-    "css": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "css": "npx tailwindcss -i ./src/input.css -o ./src/static/output.css --watch",
+    "start": "node src/index.js"
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.10",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
